--- a/notebooks followalong/01_pytorch_workflow.ipynb
+++ b/notebooks followalong/01_pytorch_workflow.ipynb
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1528,7 +1528,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\limfy\\AppData\\Local\\Temp\\ipykernel_38864\\1296048670.py:5: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\limfy\\AppData\\Local\\Temp\\ipykernel_37720\\1296048670.py:5: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  loaded_model_0.load_state_dict(torch.load(f=MODEL_SAVE_PATH))\n"
      ]
     },
@@ -1961,15 +1961,21 @@
     "# Subclass nn.Module to make our model\n",
     "class LinearRegressionModelV2(nn.Module):\n",
     "    def __init__(self):\n",
-    "        super().__init__()\n",
+    "        super().__init__() # calls the constructor of the parent class (nn.Module) to initialize it. This is necessary to ensure the module is properly registered within PyTorch's model framework.\n",
+    "        \n",
     "        # Use nn.Linear() for creating the model parameters\n",
-    "        self.linear_layer = nn.Linear(in_features=1, \n",
-    "                                      out_features=1)\n",
+    "        # layer that applies linear transaformation y = xW^T + b\n",
+    "        # i.e. a Dense layer / Fully Connected layer\n",
+    "        self.linear_layer = nn.Linear(in_features=1,  # input sample's size: 1\n",
+    "                                      out_features=1) # output sample's size 1\n",
     "    \n",
     "    # Define the forward computation (input data x flows through nn.Linear())\n",
-    "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
-    "        return self.linear_layer(x)\n",
-    "\n",
+    "    # forward pass\n",
+    "    def forward(self, x: torch.Tensor) -> torch.Tensor: #The input data is expected to be a PyTorch tensor.\n",
+    "        return self.linear_layer(x)  # The input x is passed through self.linear_layer, which computes the\n",
+    "        # linear transformation y = xW^T + b, where W and b are the weight and bias parameters of the linear layer. \n",
+    "        # The result is returned as the output of the forward method. \n",
+    " \n",
     "# Set the manual seed when creating the model (this isn't always needed but is used for demonstrative purposes, try commenting it out and seeing what happens)\n",
     "torch.manual_seed(42)\n",
     "model_1 = LinearRegressionModelV2()\n",
@@ -2069,7 +2075,12 @@
     "\n",
     "```\n",
     "device(type='cuda', index=0)\n",
-    "```"
+    "```\n",
+    "\n",
+    "To convert tensor to numpy, need to move to CPU first thus\n",
+    "\n",
+    "```tensor_on_GPU.cpu().numpy()```\n",
+    "\n"
    ]
   },
   {
@@ -2097,7 +2108,12 @@
     "\n",
     "The learning rate of `0.01` worked well before too so let's use that again.\n",
     "\n",
-    "\n"
+    "For training we need:\n",
+    "\n",
+    "* A Training loop\n",
+    "* Loss Function \n",
+    "* Optimizer\n",
+    "* Testing loop\n"
    ]
   },
   {
@@ -2111,7 +2127,7 @@
     "# Create loss function\n",
     "loss_fn = nn.L1Loss()\n",
     "\n",
-    "# Create optimizer\n",
+    "# Create optimizer: Stochastic Gradient Descent\n",
     "optimizer = torch.optim.SGD(params=model_1.parameters(), # optimize newly created model's parameters\n",
     "                            lr=0.01)"
    ]
@@ -2163,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2206,7 +2222,7 @@
     "    ### Training\n",
     "    model_1.train() # train mode is on by default after construction\n",
     "\n",
-    "    # 1. Forward pass\n",
+    "    # 1. Forward pass  - Forward Prop: Calculate predictions\n",
     "    y_pred = model_1(X_train)\n",
     "\n",
     "    # 2. Calculate loss\n",
@@ -2218,10 +2234,11 @@
     "    # torch.optim.SGD\n",
     "    optimizer.zero_grad()\n",
     "\n",
-    "    # 4. Loss backward\n",
+    "    # 4. Loss backward - Backpropagation: Calculate gradients wrt to weights and bias\n",
+    "\n",
     "    loss.backward()\n",
     "\n",
-    "    # 5. Step the optimizer\n",
+    "    # 5. Step the optimizer (i.e. which way should the weights and bias go)\n",
     "    optimizer.step()\n",
     "\n",
     "    ### Testing\n",
@@ -2494,7 +2511,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\limfy\\AppData\\Local\\Temp\\ipykernel_38864\\2631515358.py:5: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\limfy\\AppData\\Local\\Temp\\ipykernel_37720\\2631515358.py:5: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  loaded_model_1.load_state_dict(torch.load(MODEL_SAVE_PATH))\n"
      ]
     }
